--- a/curso-udemy/curso-php/movieStar/css/styles.css
+++ b/curso-udemy/curso-php/movieStar/css/styles.css
@@ -93,6 +93,30 @@
 #auth-row {
     justify-content: space-evenly;
 }
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+  }
+  
+  .msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 1px #000;
+    text-align: center;
+  }
+  
+  .msg.error {
+    color: #842029;
+    background-color: #F8D7DA;
+    border-color: #F5C2C7;
+  }
+  
+  .msg.success {
+    color: #0F5132;
+    background-color: #D1E7DD;
+    border-color: #BADBCC;
+  }
 
  #login-container h2,
  #register-container h2 {
